# MyCppProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  boolean.cpp  build.ninja  cmake_install.cmake  debagger.cpp  ifelse.cpp  main.cpp  mamaIAmHacker.txt
