cmake_minimum_required(VERSION 3.29)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyCppProject
    .vscode/about_switch.cpp
    .vscode/arrays.cpp
    .vscode/calculator.cpp
    .vscode/cont.cpp
    .vscode/debagger.cpp
    .vscode/dowhile.cpp
    .vscode/enter_sign.cpp
    .vscode/for.cpp
    .vscode/goto.cpp
    ".vscode/nested_loops copy.cpp"
    .vscode/nested_loops.cpp
    .vscode/parity.cpp
    .vscode/while.cpp
    boolean.cpp
    debagger.cpp
    ifelse.cpp
    main.cpp)
